--- a/dev/sass/_slider.scss
+++ b/dev/sass/_slider.scss
@@ -20,6 +20,7 @@
 			position: absolute;
 			top:50%;
 			transform: translateY(-50%) translate3d(0,0,0);
+			z-index: 5;
 
 			&:hover { background-color: darken(white, 5%); }
 		}
